@@ -1,6 +1,8 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+        - the Module::Build plugin now includes any DevelopRequires prereqs in
+          the generated Build.PL file. (Dave Rolsky)
 
 5.023     2014-10-30 22:56:42-04:00 America/New_York
         - optimizations to loading of heavyweight libraries in cmd line app
